<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:icon="@drawable/setting"
            android:id="@+id/setting"
            app:showAsAction="always"
            android:title="@string/setting"
            >
            <menu>
                <item
                    android:id="@+id/SettingMuisk"
                    android:title="@string/musik"
                    android:checkable="true"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/SettingSound"
                    android:title="@string/sound"
                    android:checkable="true"
                    android:checked="true"
                    />

            </menu>
        </item>
    <item
        android:id="@+id/Reset"
        android:title="@string/reset"
        app:showAsAction="always"
        android:icon="@drawable/ic_replay_white_24dp" />

            <item
                android:id="@+id/back"
                android:title="@string/back_menue"
                app:showAsAction="always"
                android:icon="@drawable/home"
                />
            <item
                android:id="@+id/credithint"
                android:title="@string/hint"
                app:showAsAction="always"
                android:icon="@drawable/hint"
                />
    <item
        android:icon="@drawable/rechtsapp"
        android:title="@string/weg"
        android:id="@+id/rein"
        app:showAsAction="always"/>
</menu>